--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.12.9",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.9.0",
+    "socket.io": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
